--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
     --text_light: #fff;
     --text_med: #53627c;
     --text_dark: #1e2432;
-    --red: #ff1e42;
+    --red: #b62e80;
     --darkred: #c3112d;
     --orange: #ff8c00;
   }
